--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         .sidebar {
             width: 260px;
-            background-color: #171717;
+            background-color: #f3f4f6;
             padding: 8px;
             display: flex;
             flex-direction: column;
@@ -53,7 +53,7 @@
 
         .sidebar-item {
             padding: 12px;
-            color: #ececf1;
+            color: #374151;
             cursor: pointer;
             border-radius: 6px;
             font-size: 14px;
