--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             padding: 8px;
             display: flex;
             flex-direction: column;
-            border-right: 1px solid #4b5563;
+            border-right: 1px solid #e5e7eb;
         }
 
         .new-chat-btn {
             background-color: transparent;
-            border: 1px solid #4b5563;
-            color: #ececf1;
+            border: 1px solid #d1d5db;
+            color: #374151;
             padding: 12px;
             border-radius: 6px;
             cursor: pointer;
@@ -43,7 +43,7 @@
         }
 
         .new-chat-btn:hover {
-            background-color: #374151;
+            background-color: #e5e7eb;
         }
 
         .sidebar-items {
@@ -64,7 +64,7 @@
         }
 
         .sidebar-item:hover {
-            background-color: #374151;
+            background-color: #e5e7eb;
         }
 
         .main-content {
