--- a/index.html
+++ b/index.html
@@ -178,25 +178,27 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            font-size: 14px;
+            font-size: 13px;
+            color: #374151;
         }
 
         .thinking-status {
-            width: 8px;
-            height: 8px;
+            width: 6px;
+            height: 6px;
             border-radius: 50%;
-            background-color: #6b7280;
+            background-color: #9ca3af;
             animation: pulse 1.5s infinite;
         }
 
         .thinking-status.completed {
-            background-color: #10b981;
+            background-color: #059669;
             animation: none;
         }
 
         .thinking-chevron {
             transition: transform 0.2s;
-            color: #6b7280;
+            color: #9ca3af;
+            font-size: 12px;
         }
 
         .thinking-chevron.expanded {
