--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         }
 
         .content-chunk {
-            margin-bottom: 20px;
+            margin-bottom: 0; /* remove extra gap between chunks */
             padding: 12px 0;
             border-bottom: 1px solid #f0f0f0;
             cursor: pointer;
@@ -210,13 +210,13 @@
         }
 
         .chunk-content p {
-            margin-bottom: 12px;
+            margin-bottom: 8px;
             color: #374151;
             font-size: 14px;
         }
 
         .chunk-content p:last-child {
-            margin-bottom: 8px;
+            margin-bottom: 0; /* trim trailing space inside each chunk */
         }
 
         .search-links {
@@ -912,7 +912,7 @@
         function createSkipButton(callback) {
             const button = document.createElement('button');
             button.className = 'skip-button';
-            button.textContent = 'Skip for a quicker response';
+            button.textContent = 'Skip'; // changed from "Skip for a quicker response"
             button.addEventListener('click', callback);
             return button;
         }
