Change title and placeholder to 'Fake ChatGPT'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT</title>
+    <title>Fake ChatGPT</title
     <style>
         * {
             margin: 0;
@@ -436,7 +436,7 @@
                 <textarea 
                     id="messageInput" 
                     class="input-field" 
-                    placeholder="Message ChatGPT"
+                    placeholder="Message Fake ChatGPT"
                     rows="1"
                 ></textarea>
                 <button id="sendBtn" class="send-btn" disabled>
