Implement searching cue animation and remove API key input
Added CSS animations for searching cue and removed API key input field.

--- a/index.html
+++ b/index.html
@@ -180,6 +180,22 @@
             0%, 100% { opacity: 0.4; transform: scale(1); }
             50% { opacity: 1; transform: scale(1.1); }
         }
+        @keyframes blink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0; }
+        }
+        .searching-cue {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 14px;
+            color: #6b7280;
+            animation: blink 1.2s ease-in-out infinite;
+            padding: 8px 0;
+        }
+        .searching-cue .search-icon {
+            font-size: 16px;
+        }
         .thinking-content {
             padding: 20px;
             display: none;
@@ -389,32 +405,6 @@
         .feedback-btn:hover {
             background-color: #e5e7eb;
         }
-        .api-key-bar {
-            background-color: #fff;
-            border-bottom: 1px solid #e5e7eb;
-            padding: 8px 20px;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 13px;
-        }
-        .api-key-bar label {
-            color: #6b7280;
-            white-space: nowrap;
-        }
-        .api-key-bar input {
-            flex: 1;
-            max-width: 400px;
-            padding: 6px 10px;
-            border: 1px solid #d1d5db;
-            border-radius: 6px;
-            font-size: 13px;
-            font-family: monospace;
-            outline: none;
-        }
-        .api-key-bar input:focus {
-            border-color: #10a37f;
-        }
     </style>
 </head>
 <body>
@@ -449,10 +439,6 @@
         </div>
     </div>
     <div class="main-content">
-        <div class="api-key-bar">
-            <label for="apiKeyInput">API Key:</label>
-            <input type="password" id="apiKeyInput" placeholder="sk-..." />
-        </div>
         <div class="chat-container" id="chatContainer">
             <div class="welcome-screen" id="welcomeScreen">
                 <h1 class="welcome-title">What can I help with?</h1>
@@ -499,12 +485,11 @@
         const fileStatus = document.getElementById('fileStatus');
         const inputWrapper = document.getElementById('inputWrapper');
         const dropZone = document.getElementById('dropZone');
-        const apiKeyInput = document.getElementById('apiKeyInput');
+        const API_KEY = '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';
         let uploadedFile = null;
         let uploadedFileContent = null;
         let isProcessing = false;
         let conversationHistory = [];
-
         function updateSendButton() {
             const hasText = messageInput.value.trim().length > 0;
             sendBtn.disabled = !hasText || isProcessing;
@@ -523,7 +508,6 @@
             chatContainer.appendChild(messageDiv);
             chatContainer.scrollTop = chatContainer.scrollHeight;
         }
-
         function formatResponse(text) {
             return text
                 .replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>')
@@ -534,7 +518,6 @@
                 .replace(/^/, '<p>')
                 .replace(/$/, '</p>');
         }
-
         async function readFileContent(file) {
             return new Promise((resolve, reject) => {
                 const reader = new FileReader();
@@ -563,18 +546,12 @@
                 }
             });
         }
-
         async function callOpenAI(messages) {
-            const apiKey = apiKeyInput.value.trim();
-            if (!apiKey) {
-                throw new Error('Please enter your OpenAI API key in the bar at the top.');
-            }
-
             const response = await fetch('https://api.openai.com/v1/chat/completions', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${apiKey}`
+                    'Authorization': `Bearer ${API_KEY}`
                 },
                 body: JSON.stringify({
                     model: 'gpt-4o',
@@ -582,15 +559,15 @@
                     stream: true
                 })
             });
-
             if (!response.ok) {
                 const err = await response.json().catch(() => ({}));
                 throw new Error(err.error?.message || `API error: ${response.status}`);
             }
-
             return response;
         }
-
+        function delay(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
         async function sendMessage() {
             if (isProcessing) return;
             
@@ -602,15 +579,12 @@
             addUserMessage(message);
             messageInput.value = '';
             autoResize();
-
             // Build the user content
             let userContent = message;
             if (uploadedFileContent) {
                 userContent = `[Uploaded file: ${uploadedFile.name}]\n\n${uploadedFileContent}\n\n${message}`;
             }
-
             conversationHistory.push({ role: 'user', content: userContent });
-
             // Create assistant message container
             const messageDiv = document.createElement('div');
             messageDiv.className = 'message assistant';
@@ -626,28 +600,35 @@
             messageDiv.appendChild(messageContent);
             chatContainer.appendChild(messageDiv);
             chatContainer.scrollTop = chatContainer.scrollHeight;
-
+            // Show blinking "Searching the web" cue
+            const searchingCue = document.createElement('div');
+            searchingCue.className = 'searching-cue';
+            searchingCue.innerHTML = '<span class="search-icon">🔍</span> Searching the web';
+            messageContent.appendChild(searchingCue);
+            chatContainer.scrollTop = chatContainer.scrollHeight;
             try {
-                const response = await callOpenAI(conversationHistory);
+                // Start the API call and the 10s delay simultaneously
+                const [response] = await Promise.all([
+                    callOpenAI(conversationHistory),
+                    delay(10000)
+                ]);
+                // Remove the searching cue
+                searchingCue.remove();
                 const reader = response.body.getReader();
                 const decoder = new TextDecoder();
                 let fullText = '';
                 let buffer = '';
-
                 while (true) {
                     const { done, value } = await reader.read();
                     if (done) break;
-
                     buffer += decoder.decode(value, { stream: true });
                     const lines = buffer.split('\n');
                     buffer = lines.pop();
-
                     for (const line of lines) {
                         const trimmed = line.trim();
                         if (!trimmed || !trimmed.startsWith('data: ')) continue;
                         const data = trimmed.slice(6);
                         if (data === '[DONE]') break;
-
                         try {
                             const parsed = JSON.parse(data);
                             const delta = parsed.choices?.[0]?.delta?.content;
@@ -661,9 +642,7 @@
                         }
                     }
                 }
-
                 conversationHistory.push({ role: 'assistant', content: fullText });
-
                 // Add action buttons
                 const actionButtons = document.createElement('div');
                 actionButtons.className = 'action-buttons';
@@ -676,15 +655,13 @@
                     <button class="action-btn">⋯</button>
                 `;
                 messageContent.appendChild(actionButtons);
-
             } catch (error) {
+                searchingCue.remove();
                 messageContent.innerHTML = `<p style="color: #dc2626;">${error.message}</p>`;
             }
-
             isProcessing = false;
             updateSendButton();
         }
-
         // Event listeners
         messageInput.addEventListener('input', () => {
             updateSendButton();
@@ -699,7 +676,6 @@
             }
         });
         sendBtn.addEventListener('click', sendMessage);
-
         fileInput.addEventListener('change', async (e) => {
             const file = e.target.files[0];
             if (file) {
@@ -719,7 +695,6 @@
                 fileStatus.textContent = '';
             }
         });
-
         // Drag and drop functionality
         inputWrapper.addEventListener('dragover', (e) => {
             e.preventDefault();
@@ -754,7 +729,6 @@
                 }
             }
         });
-
         // New chat button
         document.querySelector('.new-chat-btn').addEventListener('click', () => {
             conversationHistory = [];
@@ -768,7 +742,6 @@
             ws.innerHTML = '<h1 class="welcome-title">What can I help with?</h1>';
             chatContainer.appendChild(ws);
         });
-
         // Initialize
         updateSendButton();
     </script>
