--- a/index.html
+++ b/index.html
@@ -180,17 +180,12 @@
             0%, 100% { opacity: 0.4; transform: scale(1); }
             50% { opacity: 1; transform: scale(1.1); }
         }
-        @keyframes blink {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0; }
-        }
         .searching-cue {
             display: flex;
             align-items: center;
             gap: 8px;
             font-size: 14px;
             color: #6b7280;
-            animation: blink 1.2s ease-in-out infinite;
             padding: 8px 0;
         }
         .searching-cue .search-icon {
@@ -485,7 +480,7 @@
         const fileStatus = document.getElementById('fileStatus');
         const inputWrapper = document.getElementById('inputWrapper');
         const dropZone = document.getElementById('dropZone');
-        const API_KEY = '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';
+        const API_KEY = '[API KEY HERE]';
         let uploadedFile = null;
         let uploadedFileContent = null;
         let isProcessing = false;
@@ -608,7 +603,7 @@
             chatContainer.scrollTop = chatContainer.scrollHeight;
             try {
                 // Wait 10 seconds while showing "Searching the web"
-                await delay(10000);
+                await delay(5000);
                 // Remove the searching cue and start the API call
                 searchingCue.remove();
                 const response = await callOpenAI(conversationHistory);
