Update API key in index.html
Replaced placeholder API key with actual API key.

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         const fileStatus = document.getElementById('fileStatus');
         const inputWrapper = document.getElementById('inputWrapper');
         const dropZone = document.getElementById('dropZone');
-        const API_KEY = '[API KEY HERE]';
+        const API_KEY = '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';
         let uploadedFile = null;
         let uploadedFileContent = null;
         let isProcessing = false;
